--- a/zen.desktop
+++ b/zen.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Zen Browser
 Exec=zen %u
-Icon=zen
+Icon=zen-browser
 Type=Application
 MimeType=text/html;text/xml;application/xhtml+xml;x-scheme-handler/http;x-scheme-handler/https;application/x-xpinstall;application/pdf;application/json;
 StartupWMClass=zen-alpha
